# simpleble

./: .gitignore  AI_SKILLS_MCP_IMPLEMENTATION.md  Cargo.toml  MANIFEST.in  README.rst  SECURITY.md  package-lock.json  package.json  setup.py
.github/actions/build-native/: action.yml
.github/actions/build-python-wheels/: README.md  action.yml
.github/actions/setup-version/: action.yml
.github/workflows/: ci_lint.yml  ci_linux_internals.yml  ci_main.yml  ci_simpleaible.yml  ci_simpleble.yml  ci_simpledroidble.yml  ci_simplejavable.yml  ci_simplepyble.yml  ci_simplernble.yml  ci_simplersble.yml  ci_smoketest.yml
cmake/find/: FindDBus1.cmake
docs/: README.md  changelog.rst  index.rst  next.config.mjs  package-lock.json  package.json
docs-new/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
docs-new/content/docs/: cmake_primer.mdx  extras.mdx  index.mdx  licensing.mdx  licensing_faq.mdx  meta.json  overview.mdx
docs-new/src/app/: global.css  layout.tsx
docs-new/src/components/: docs-home-hero.tsx  docs-home-search.tsx  docs-home.tsx  footer.tsx  hover-effect-wrapper.tsx  hover-illumination-link.tsx  logo-with-theme.tsx  navbar.tsx  sidebar-hover-effect.tsx
docs-new/src/lib/: layout.shared.tsx
docs/content/docs/: changelog.mdx  extras.mdx  index.mdx  installation.mdx  licensing.mdx  meta.json  overview.mdx  quickstart.mdx
docs/simpleble/: tutorial.rst  usage.rst
docs/src/app/: layout.tsx
docs/src/lib/: source.ts
examples/simpleble/: CMakeLists.txt
examples/simpleble-android/app/: build.gradle.kts
examples/simpleble-android/gradle/: libs.versions.toml
examples/simpleble/src/: list_adapters.cpp  notify.cpp  peripheral_server.cpp  scan.cpp
examples/simplebluez/: CMakeLists.txt
examples/simplebluez/src/: peripheral_acquire_notify.cpp  peripheral_advertise.cpp  peripheral_e2e.cpp  peripheral_stream.cpp
examples/simplejavable/: build.gradle.kts
examples/simplejsble/expo-ios-android/: app.json  package-lock.json  package.json  tsconfig.json
examples/simplejsble/react-native-macos/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
examples/simplepyble/: notify_async.py
examples/simplernble/: package-lock.json
examples/simplernble/expo-ios-android/: README.md  app.json  package-lock.json  package.json
examples/simplernble/react-native/: README.md  package-lock.json  package.json
examples/simplernble/react-native-macos/: README.md  package.json
simpleaible/: README.rst  pyproject.toml
simpleaible/src/simpleaible/: cli.py
simpleble/: CMakeLists.txt
simpleble/cmake/: simpleble-config.cmake.in  simpleble.pc.in
simpleble/include/simpleble/: Adapter.h  Backend.h  Characteristic.h  Config.h  LocalPeripheral.h  PeripheralServer.h  SimpleBLE.h  Types.h  Utils.h
simpleble/src/: Config.cpp  Constants.h  Utils.cpp
simpleble/test/src/: test_bluetooth_address.cpp  test_buffer_overflow.cpp  test_bytearray.cpp  test_characteristic.cpp  test_peripheral_server.cpp
simplebluez/: CMakeLists.txt
simplebluez/cmake/: simplebluez-config.cmake.in  simplebluez.pc.in
simplebluez/include/simplebluez/: Adapter.h  Characteristic.h  Descriptor.h  Device.h  Service.h
simplebluez/src/: Adapter.cpp  Agent.cpp  Bluez.cpp  BluezRoot.cpp  Characteristic.cpp  Descriptor.cpp  Device.cpp  Service.cpp
simplebluez/src/interfaces/: Adapter1.cpp  Agent1.cpp  AgentManager1.cpp  Battery1.cpp  Device1.cpp  GattCharacteristic1.cpp  GattDescriptor1.cpp  (+1 more)
simplecble/: CMakeLists.txt
simplecble/src/: adapter.cpp  config.cpp  logging.cpp  peripheral.cpp  string_utils.h  utils.cpp
simpledbus/: CMakeLists.txt
simpledbus/cmake/: simpledbus-config.cmake.in  simpledbus.pc.in
simpledroidble/gradle/: libs.versions.toml
simpledroidble/simpledroidble/: build.gradle.kts
simplejavable/cpp/: CMakeLists.txt
simplejavable/cpp/src/: ThreadRunner.h  simplejavable.cpp
simplejavable/cpp/src/core/: AdapterWrapper.cpp  AdapterWrapper.h  Cache.cpp  Cache.h  PeripheralWrapper.cpp  PeripheralWrapper.h
simplejavable/cpp/src/java/base/: HashMap.h  Integer.cpp  Iterator.h  List.h  Set.h
simplejavable/cpp/src/java/lang/: HashMap.cpp  HashMap.h  Integer.cpp  Integer.h  Iterator.cpp  Iterator.h  List.cpp  List.h  Set.cpp  Set.h
simplejavable/cpp/src/jni/: Common.hpp  GlobalRef.hpp  HashMap.cpp  Integer.cpp  Integer.h  Iterator.cpp  List.cpp  References.hpp  Set.cpp  VM.hpp
simplejavable/java/: build.gradle.kts
simplejsble/: .gitignore  NitroSimplejsble.podspec  README.md  app.plugin.js  package-lock.json  package.json  pnpm-lock.yaml
simplejsble/android/: CMakeLists.txt  build.gradle  gradle.properties
simplejsble/cpp/: HybridAdapter.cpp  HybridAdapter.hpp
simplejsble/example/: app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
simplejsble/ios/: CMakeLists.txt
simplejsble/src/: index.ts
simplepyble/: CMakeLists.txt  README.rst
simplepyble/src/: main.cpp  wrap_config.cpp  wrap_logging.cpp
simplepyble/test/: test_simpleble.py
simplernativeble/: app.json  package-lock.json  package.json
simplernativeble/android/: settings.gradle
simplernativeble/ios/: NativeSampleModuleProvider.h  NativeSampleModuleProvider.mm  Podfile
simplernativeble/shared/: NativeSampleModule.h
simplernble/: .gitignore  .npmignore  README.md  app.plugin.js  nitro.json  package-lock.json  package.json
simplernble/android/: CMakeLists.txt  build.gradle
simplernble/android/src/main/cpp/: cpp-adapter.cpp
simplernble/android/src/main/java/com/margelo/nitro/simplernble/: NitroSimplernblePackage.kt
simplernble/apple/: Bridge.h  CMakeLists.txt
simplernble/cpp/: HybridAdapter.cpp  HybridAdapter.hpp  HybridCharacteristic.cpp  HybridCharacteristic.hpp  HybridDescriptor.cpp  HybridDescriptor.hpp  HybridPeripheral.cpp  HybridPeripheral.hpp  HybridService.cpp  HybridService.hpp
simplernble/scripts/: create-local-package.sh  prepare-package.sh
simplernble/src/: index.ts
simplersble/: README.md  build.rs
skills/simpleble/: SKILL.md  examples.md  reference.md
utils/: build_android.sh  manifest_check.py
(+327 files in other folders)
